# lingo

./: CHANGELOG.md  LICENSE  Makefile  README.md  lingo.cabal
.github/workflows/: haskell-ci.yml
exe/: Main.hs
src/: Lingo.hs
src/Lingo/Repl/: Command.hs
test/: Main.hs
