cabal-version: 3.0
name: lingo
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Jan HrÄek
maintainer: honza.hrk@gmail.com
category: Language
build-type: Simple
extra-doc-files: CHANGELOG.md

common shared
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -Wpartial-fields
    -Wunrecognised-pragmas
    -Wmissing-deriving-strategies
    -Winvalid-haddock
    -Woperator-whitespace
    -Wredundant-bang-patterns
    -Wunused-packages

  build-depends:
    base ^>=4.21.0.0

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Lingo
    Lingo.Repl.Command

  build-depends:
    haskeline,
    megaparsec,
    ollama-haskell ==0.2.0.0,
    text,
    transformers,

executable lingo
  import: shared
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    lingo

  hs-source-dirs: exe

test-suite lingo-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    lingo,
    megaparsec,
    tasty,
    tasty-hunit,
    text,
